--- a/public/index.html
+++ b/public/index.html
@@ -1985,22 +1985,30 @@ Práctica de lo Irreductible (Archivos de Arquitectura, 2022) y Atlas de Arquite
 }
   window.addEventListener("hashchange", () => window.history.pushState({}, "", '/'), {});
 
-function scrollToElement(targetElement) {
-  // Ensure the target element is within a scrollable container
+function scrollToElement(targetElement, durationMultiplier = 1) {
   const scrollContainer = targetElement.closest('.scroll-container') || document.documentElement;
-  
-  // Get the bounding rectangles
   const containerRect = scrollContainer.getBoundingClientRect();
   const targetRect = targetElement.getBoundingClientRect();
 
-  // Calculate the correct scroll position
   const targetLeft = targetRect.left - containerRect.left + scrollContainer.scrollLeft;
 
-  // Scroll to the target position smoothly
-  scrollContainer.scrollTo({
-    left: targetLeft,
-    behavior: 'smooth'
-  });
+  const duration = 500 / durationMultiplier; // Adjust the duration based on the multiplier
+
+  let startTime = null;
+
+  function animation(currentTime) {
+    if (!startTime) startTime = currentTime;
+    const timeElapsed = currentTime - startTime;
+    const progress = Math.min(timeElapsed / duration, 1);
+    const easing = progress < 0.5 ? 2 * progress * progress : -1 + (4 - 2 * progress) * progress;
+    scrollContainer.scrollLeft = scrollContainer.scrollLeft + (targetLeft - scrollContainer.scrollLeft) * easing;
+
+    if (timeElapsed < duration) {
+      requestAnimationFrame(animation);
+    }
+  }
+
+  requestAnimationFrame(animation);
 }
 
 // Add smooth horizontal scrolling behavior to all links with href pointing to an ID
@@ -2017,18 +2025,16 @@ document.querySelectorAll('a[href^="#"]').forEach(anchor => {
 // Add smooth horizontal scrolling behavior to all elements with onclick pointing to a URL containing an ID
 document.querySelectorAll('[onclick^="window.location.href"]').forEach(element => {
   element.addEventListener('click', function(e) {
-    const url = this.getAttribute('onclick').match(/window\.location\.href=['"]([^'"]+)['"]/);
-    if (url && url[1].startsWith('#')) {
+    const urlMatch = this.getAttribute('onclick').match(/window\.location\.href=['"]([^'"]+)['"]/);
+    if (urlMatch && urlMatch[1].startsWith('#')) {
       e.preventDefault(); // Prevent default behavior
-      const targetElement = document.querySelector(url[1]); // Get the target element
+      const targetElement = document.querySelector(urlMatch[1]); // Get the target element
       if (targetElement) {
-        scrollToElement(targetElement); // Scroll to the target element
+        scrollToElement(targetElement, 2); // Scroll to the target element twice as fast
       }
     }
   });
 });
-
-
 
 </script>
 
