--- a/public/index.html
+++ b/public/index.html
@@ -66,12 +66,12 @@
       <h3 style="margin-bottom: -10px">Manuel Mensa</h3>
       <p style="margin-bottom: -10px"><a style="left: 0px !important;" href="contacto@manuelmensa.com">contacto@manuelmensa.com</a></b>
       <p style="margin-bottom: -10px">Amenábar 2046, Piso 30 </p>
-      <p style="margin-bottom: 20px">Buenos Aires, Argentina</p>
+      <p style="margin-bottom: 30px">Buenos Aires, Argentina</p>
       <!--<br>-->
       <h3>Índice</h3>
-      <a style="margin-bottom: -10px" href="#matters">Matters of Fact </a><!--<br> <a href="#matters"> El Inevitable Sufrimiento de la Arquitectura</a>-->
-      <br><br><a style="margin-bottom: -10px" href="#casaERCP">Casa E.R.C.P.</a><!-- <br> <a href="#casaERCP"> Texto </a><br><a href="#casaERCP2"> Dibujos </a> <br><a href="#casaERCP3"> Fotografías x F.S. </a>-->
-      <br><br><a style="margin-bottom: -10px" href="#casaJBRC">Casa J.B.R.C. </a><!--<br> <a href="#casaJBRC"> Texto </a><br><a href="#casaJBRC2"> Dibujos </a><br><a href="#casaJBRC3">Fotografías x S.G. </a> <br><a href="#casaJBRC4"> Series</a>-->
+      <a href="#matters">Matters of Fact </a><!--<br> <a href="#matters"> El Inevitable Sufrimiento de la Arquitectura</a>-->
+      <br><a href="#casaERCP">Casa E.R.C.P.</a><!-- <br> <a href="#casaERCP"> Texto </a><br><a href="#casaERCP2"> Dibujos </a> <br><a href="#casaERCP3"> Fotografías x F.S. </a>-->
+      <br><a href="#casaJBRC">Casa J.B.R.C. </a><!--<br> <a href="#casaJBRC"> Texto </a><br><a href="#casaJBRC2"> Dibujos </a><br><a href="#casaJBRC3">Fotografías x S.G. </a> <br><a href="#casaJBRC4"> Series</a>-->
       <br><br><a href="#casaFG"> Casa F.G. </a><!-- <br><a href="#casaFG"> Texto </a> <br><a href="#casaFG2"> Dibujos </a> <br><a href="#casaFG3"> Fotografías</a>-->
       <br><br><a href="#cute">Cute-chitecture </a> <!-- <br><a href="#cute"> Arquitectura Póstuma</a> <br><a href="#cute2"> Cenotafios </a> <br><a href="#cute3"> Puentes </a> -->
       <br><br><a href="#edificioSCW">Edificio S.C.W. </a> <!--<br> <a href="#edificioSCW"> Texto </a> <br> <a href="#edificioSCW2"> Dibujos </a> <br> <a href="#edificioSCW3"> Imágenes</a> -->
