--- a/public/index.html
+++ b/public/index.html
@@ -110,8 +110,8 @@
       <p style="color:white;">.</p>
     </div>
     
-    <div class="column" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
-      <span class="anchor" id="matters"></span>
+    <div id="matters" class="column" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
+      <span class="anchor" ></span>
       <h3>Matters of Fact</h3>
       <!--<p>El Inevitable Sufrimiento de la Arquitectura</p>-->
       <!--<br>-->
@@ -156,7 +156,7 @@ Publicado en: <i>Plot 69 (Buenos Aires, 2023)</i> y en <i>Universidad Torcuato D
       <p style="color:white;">.</p>
     </div>
     
-    <div id="casaERCP"class="column" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
+    <div id="casaERCP" class="column" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
       <span class="anchor" ></span>
       <h3>Casa E.R.C.P.</h3>
       <!--<p>Texto</p>-->
@@ -293,7 +293,7 @@ Maecenas nec lobortis nunc.
       <br>
       <p>Fotografías: Santiago Giusto </p>
       <!-- Add more content here if needed -->
-      <!--<br>-->
+     </div>
      <div class="column" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
       <span class="anchor" id="casaJBRC4"></span>
       <h3 style="color:white;">.</h3>
