--- a/public/index.html
+++ b/public/index.html
@@ -396,8 +396,8 @@ Ritmo: Catalina Sfer Salas</p>
       <h3 style="color:white;">.</h3>
       <p style="color:white;">.</p>
     </div>
-       <div class="column" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
-      <span class="anchor" id="cute"></span>
+       <div id="cute" class="column" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
+      <span class="anchor" ></span>
       <h3>Cute-chitecture</h3>
       <!--<p>Arquitectura Póstuma</p>-->
       <br>
