--- a/public/index.html
+++ b/public/index.html
@@ -95,7 +95,7 @@ document.getElementById('slideForwardBottom').addEventListener('touchcancel', st
       <p style="margin-bottom: -10px"><a href="#casaFG"> Casa F.G. </a></p><!-- <br><a href="#casaFG"> Texto </a> <br><a href="#casaFG2"> Dibujos </a> <br><a href="#casaFG3"> Fotografías</a>-->
       <p style="margin-bottom: -10px"><a href="#cute">Cute-chitecture </a></p> <!-- <br><a href="#cute"> Arquitectura Póstuma</a> <br><a href="#cute2"> Cenotafios </a> <br><a href="#cute3"> Puentes </a> -->
       <p style="margin-bottom: -10px"><a href="#edificioSCW">Edificio S.C.W. </a></p> <!--<br> <a href="#edificioSCW"> Texto </a> <br> <a href="#edificioSCW2"> Dibujos </a> <br> <a href="#edificioSCW3"> Imágenes</a> -->
-      <p style="margin-bottom: -10px"><a href="#casaFV">Casa F.V. </a></p> <!--<br> <a href="#casaFV"> Texto </a> <br> <a href="#casaFV2"> Dibujos </a>-->
+      <!--<p style="margin-bottom: -10px"><a href="#casaFV">Casa F.V. </a></p>--> <!--<br> <a href="#casaFV"> Texto </a> <br> <a href="#casaFV2"> Dibujos </a>-->
       <p style="margin-bottom: -10px"><a href="#casaFKL">Casa F.K.L. </a></p> <!--<br> <a href="#casaFKL">Texto</a> <br><a href="#casaFKL2"> Dibujos </a> <br><a href="#casaFKL3"> Fotografías</a> <br><a href="#casaFKL4"> Videos </a> -->
       <p style="margin-bottom: -10px"><a href="#creciendo">Creciendo en Público </a></p> <!--<br> <a href="#creciendo"> Newsletter Errático</a>-->
       <p style="margin-bottom: -10px"><a href="#erewhon">Erewhon </a></p> <!--<br> <a href="#erewhon"> Textos</a> <br><a href="#erewhon2"> Proposiciones</a> <br><a href="#erewhon3"> Dibujos </a> <br><a href="#erewhon4"> Imágenes</a>-->
