--- a/public/index.html
+++ b/public/index.html
@@ -100,7 +100,33 @@ function scrollToNextId(event) {
   }
 }
 
+// Function to scroll to the previous element with a specific ID on mobile
+function scrollToPreviousId(event) {
+  event.preventDefault();
+  
+  var currentScroll = document.querySelector(".container").scrollLeft;
+  var previousElement = null;
+  var elements = document.querySelectorAll('.container > *[id]');
+
+  for (var i = elements.length - 1; i >= 0; i--) {
+    var element = elements[i];
+    if (element.offsetLeft < currentScroll) {
+      previousElement = element;
+      break;
+    }
+  }
+
+  if (previousElement) {
+    previousElement.scrollIntoView({ behavior: 'smooth', block: 'nearest', inline: 'start' });
+  }
+}
+
 // Event listeners for touch events to support mobile devices
+document.getElementById('slideBackBottom').addEventListener('touchstart', scrollToPreviousId);
+document.getElementById('slideBackBottom').addEventListener('mousedown', startScrollLeft);
+document.getElementById('slideBackBottom').addEventListener('mouseup', stopScrollLeft);
+document.getElementById('slideBackBottom').addEventListener('mouseleave', stopScrollLeft);
+
 document.getElementById('slideForwardBottom').addEventListener('touchstart', scrollToNextId);
 document.getElementById('slideForwardBottom').addEventListener('mousedown', startScrollRight);
 document.getElementById('slideForwardBottom').addEventListener('mouseup', stopScrollRight);
@@ -113,8 +139,11 @@ document.getElementById('slideForwardBottom').addEventListener('mouseleave', sto
 <div class="button-container-l">
   <button id="slideBackTop" type="button" class="arrow-button-l" onclick="window.location.href = '#indice';"></button> <!--&#x226A;&#xFE0E;-->
 </div>
-<button id="slideBackBottom" type="button" class="arrow-button-l" onmousedown="startScrollLeft()" onmouseup="stopScrollLeft()" onmouseleave="stopScrollLeft()"></button>
-  
+<!--<button id="slideBackBottom" type="button" class="arrow-button-l" onmousedown="startScrollLeft()" onmouseup="stopScrollLeft()" onmouseleave="stopScrollLeft()"></button>-->
+  <button id="slideBackBottom" type="button" class="arrow-button-l"
+        onmousedown="startScrollLeft()" onmouseup="stopScrollLeft()" 
+        onmouseleave="stopScrollLeft()" ontouchstart="scrollToPreviousId(event)">
+</button>
   <div class="container">
 
     <div class="column" id="gapB" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
