--- a/public/index.html
+++ b/public/index.html
@@ -137,7 +137,7 @@ document.getElementById('slideForwardBottom').addEventListener('mouseleave', sto
 <body>
   
 <div class="button-container-l">
-  <button id="slideBackTop" type="button" class="arrow-button-l" onclick="window.location.href = '#indice';"></button> <!--&#x226A;&#xFE0E;-->
+  <a href="#indice"><button id="slideBackTop" type="button" class="arrow-button-l" ></button> <!--&#x226A;&#xFE0E; onclick="window.location.href = '#indice';"--></a>
 </div>
 <!--<button id="slideBackBottom" type="button" class="arrow-button-l" onmousedown="startScrollLeft()" onmouseup="stopScrollLeft()" onmouseleave="stopScrollLeft()"></button>-->
   <button id="slideBackBottom" type="button" class="arrow-button-l"
