--- a/public/index.html
+++ b/public/index.html
@@ -263,6 +263,7 @@ Publicado en: <i>Plot 69 (Buenos Aires, 2023)</i> y en <i>Universidad Torcuato D
       <h3 style="color:white;">.</h3>
       <!--<p>Dibujos</p>-->
       <!--<br>-->
+      <hr>
       <img loading="lazy" src="assets/img/02_avalos 2172_planos de arquitectura/01.jpg" alt="Image 1">
       <img loading="lazy" src="assets/img/02_avalos 2172_planos de arquitectura/02.jpg" alt="Image 1">
       <br>
@@ -274,6 +275,7 @@ Publicado en: <i>Plot 69 (Buenos Aires, 2023)</i> y en <i>Universidad Torcuato D
       <h3 style="color:white;">.</h3>
       <!--<p>Fotografías x F.S.</p>-->
       <!--<br>-->
+      <hr>
       <img loading="lazy" src="assets/img/03_avalos 2172_fotos/01.jpg" alt="Image 1">
       <img loading="lazy" src="assets/img/03_avalos 2172_fotos/02.jpg" alt="Image 1">
       <img loading="lazy" src="assets/img/03_avalos 2172_fotos/03.jpg" alt="Image 1">
@@ -1991,7 +1993,7 @@ Práctica de lo Irreductible (Archivos de Arquitectura, 2022) y Atlas de Arquite
   </div>
   
   <div class="button-container-r">
-  <button id="slideForwardTop" type="button" class="arrow-button-r" onclick="window.location.href = '#web';"></button> <!--&#x226B;&#xFE0E;-->
+  <a href="#web"><button id="slideForwardTop" type="button" class="arrow-button-r"></button></a> <!--&#x226B;&#xFE0E; onclick="window.location.href = '#web';"-->
 </div>
  <!-- <button id="slideForwardBottom" type="button" class="arrow-button-r" onmousedown="startScrollRight()" onmouseup="stopScrollRight()" onmouseleave="stopScrollRight()"></button>-->
 <button id="slideForwardBottom" type="button" class="arrow-button-r" 
