--- a/public/index.html
+++ b/public/index.html
@@ -454,7 +454,7 @@ Ritmo: Catalina Sfer Salas</p>
       <!--<br>-->
       <!--<hr>-->
       <img loading="lazy" src="assets/img/09_casa gully_planos de arquitectura/01.jpg" alt="Image 1">
-       <video autoplay muted="muted" loop poster="assets/img/34_avenida de mayo/03.png" src="assets/img/09_casa gully_planos de arquitectura/05.mp4" alt="Video 1"></video> 
+       <video autoplay muted="muted" loop src="assets/img/09_casa gully_planos de arquitectura/05.mp4" alt="Video 1"></video> 
       <!-- Add more content here if needed -->
     </div>
     <div id="casaFG3" class="column" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
