--- a/public/index.html
+++ b/public/index.html
@@ -194,7 +194,7 @@ document.getElementById('slideForwardBottom').addEventListener('mouseleave', sto
       <p style="margin-bottom: -10px"><a href="#web">Sitio Web</a></p><!-- <a href="#web"><br>Tapiz</a>-->
     </div>
 
-    <div class="column" id="matters" id="gap2B" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
+    <div class="column" id="gap2B" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
       <span class="anchor"></span>
       <h3 style="color:white;">.</h3>
       <p style="color:white;">.</p>
