--- a/public/index.html
+++ b/public/index.html
@@ -200,7 +200,7 @@ document.getElementById('slideForwardBottom').addEventListener('mouseleave', sto
       <p style="color:white;">.</p>
     </div>
     
-    <div  class="column" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
+    <div id="matters" class="column" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
       <span class="anchor" ></span>
       <br><br><br><br><br><br><br><br><br><br><br><br>
       <h3>Matters of Fact</h3>
