--- a/public/index.html
+++ b/public/index.html
@@ -836,14 +836,7 @@ In Front of a Nightclub<br>
       <!--<p>Texto</p>-->
       <!--<br>-->
       <!--<hr>-->
-      <p>Un laberinto ordenado creado por pares de escaleras opuestas que parten de un mismo centro,
-proliferan de dos en dos y cambian de dirección creando un recorrido cambiante pero reconocible. A su
-vez, cada línea de escaleras se abre en dos y se pliega en una segunda escalera espejada que vuelve al
-centro de partida. Los escalones de las escaleras superiores tiemblan, se acumulan en los extremos y se
-conectan formando arcos de altura y sección variable. De las escaleras inferiores surgen arcos seguidos
-de columnas dirigidas hacia el plano límite inferior. Los escalones prolongan progresivamente su
-profundidad hasta alcanzar el ancho de la próxima línea de escaleras volviéndose a la vez descanso y
-último escalón.</p>
+      <p>Un laberinto ordenado creado por pares de escaleras opuestas que parten de un mismo centro, proliferan de dos en dos y cambian de dirección creando un recorrido cambiante pero reconocible. A su vez, cada línea de escaleras se abre en dos y se pliega en una segunda escalera espejada que vuelve al centro de partida. Los escalones de las escaleras superiores tiemblan, se acumulan en los extremos y se conectan formando arcos de altura y sección variable. De las escaleras inferiores surgen arcos seguidos de columnas dirigidas hacia el plano límite inferior. Los escalones prolongan progresivamente su profundidad hasta alcanzar el ancho de la próxima línea de escaleras volviéndose a la vez descanso y último escalón.</p>
       <br>
        <br>
       <p>Equipo: Manuel Mensa, Nicolás Boscoboinik</p>
@@ -962,9 +955,8 @@ shaping spatial <u>profusion</u>.</p>
       </p>
       <br>
       <p> Texto: Manuel Mensa
-<br> Publicado en: Superdigital, CPAU
-        <br> Editor: Ciro Najle
-        <br> Año: 2018
+<br> Publicado en: Superdigital.
+        <br> (Editor: Ciro Najle. CPAU, 2018)
       </p>
         <!-- Add more content here if needed -->
     </div>
@@ -1371,7 +1363,7 @@ En la cultura arquitectónica actual, donde todo posicionamiento afirmativo ráp
      <br>
       <br>
       <p>Entrevistas: Lux Valladolid, Manuel Mensa
-Técnica: Nacho Aviles
+Técnica: Nacho Avilés
 Música: Lucas Barbuzzi
 Dirección de arte: Magdalena Molinari, Miguel Marino
 Piso 29
@@ -1604,7 +1596,7 @@ Octubre 2023
        <br>
        <br>
        
-La primera vez que escuché hablar sobre Ferdydurke alguien me dijo que había sido escrito por un poláco y que luego cuando junto con un grupo de admiradores, lo había traducido en un bar de Buenos Aires, el resultado era como leer a alguien que no sabe hablar bien la lengua castellana, que tiene poco vocabulario, que conjuga mal los verbos. La lectura del libro escrito por Witold Gombrowicz excede y supera ampliamente lo que podría escribir alguien con recursos limitados para hablar una lengua. El siguiente texto está dictado, es decir construido, y luego escrito, como si hablara alguien que en el sentido más estricto, no conoce la lengua en la que narra. Su contenido sigue todos los desvíos que surgen de seguir la palabra anterior como si hubiera sido impuesta, o más bien, <i>como si fueran plantadas ahí al azar como el viento que trae los granos.</i>
+La primera vez que escuché hablar sobre Ferdydurke alguien me dijo que había sido escrito por un poláco que, mientras vivía en Buenos Aires, lo tradujo al castellano con un grupo de admiradores. Supuestamente el resultado de tal traducción era como leer a alguien que no sabe hablar bien la lengua castellana, que tiene poco vocabulario, que conjuga mal los verbos. El libro de Gombrowicz es mucho más que lo que había imaginado, pero entonces también mucho menos... El siguiente texto surge de la desilusión producto de imaginar <i>literal y exageradamente,</i> está dictado, es decir <i>performado</i> y construido, y luego escrito, como si hablara alguien que, en el sentido más estricto, no conoce la lengua en la que narra. Su contenido sigue todos los desvíos que surgen de seguir la palabra anterior como si hubiera sido impuesta, o más bien, como si fueran <i>plantadas ahí al azar como el viento que trae los granos.</i>
 </p>
     </div>
  <div id="amorosa2" class="column" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
