--- a/public/index.html
+++ b/public/index.html
@@ -157,7 +157,7 @@ document.getElementById('slideForwardBottom').addEventListener('mouseleave', sto
       <p style="margin-bottom: -10px"><a style="left: 0px !important;" href="contacto@manuelmensa.com">contacto@manuelmensa.com</a></b>
       <p style="margin-bottom: -10px">Amenábar 2046, Piso 30 </p>
       <p style="margin-bottom: -10px">Buenos Aires, Argentina</p>
-      <p style="margin-bottom: 122px"></p><a href="/">ES  </a><a href="/index_EN.html">  EN</a></p>
+      <p style="margin-bottom: 122px"><a href="/">ES  </a><a href="/index_EN.html">  EN</a></p>
       <!--<br>-->
       <h3>Índice</h3>
       <p style="margin-bottom: -10px"><a href="#matters">Matters of Fact </a></p><!--<br> <a href="#matters"> El Inevitable Sufrimiento de la Arquitectura</a>-->
