--- a/public/index.html
+++ b/public/index.html
@@ -265,7 +265,7 @@ Publicado en: <i>Plot 69 (Buenos Aires, 2023)</i> y en <i>Universidad Torcuato D
       <span class="anchor" ></span>
       <h3 style="color:white;">.</h3>
       <br><br><br><br><br><br><br><br><br><br><br><br>
-      <!--<p>Dibujos</p>-->
+      <div class="guia"><p>Texto</p><p style="font-weight: bold !important;">Dibujos</p><p>Fotografías x F.S.</p></div>
       <!--<br>-->
       <!--<hr>-->
       <img loading="lazy" src="assets/img/02_avalos 2172_planos de arquitectura/01.jpg" alt="Image 1">
@@ -278,7 +278,7 @@ Publicado en: <i>Plot 69 (Buenos Aires, 2023)</i> y en <i>Universidad Torcuato D
       <span class="anchor" ></span>
       <h3 style="color:white;">.</h3>
       <br><br><br><br><br><br><br><br><br><br><br><br>
-      <!--<p>Fotografías x F.S.</p>-->
+      <div class="guia"><p>Texto</p><p>Dibujos</p><p style="font-weight: bold !important;">Fotografías x F.S.</p></div>
       <!--<br>-->
       <!--<hr>-->
       <img loading="lazy" src="assets/img/03_avalos 2172_fotos/01.jpg" alt="Image 1">
@@ -353,7 +353,7 @@ Maecenas nec lobortis nunc.
       <span class="anchor" ></span>
       <br><br><br><br><br><br><br><br><br><br><br><br>
       <h3>Casa J.B.R.C.</h3>
-      <!--<p>Texto</p>-->
+      <div class="guia"><p style="font-weight: bold !important;">Texto</p><p>Dibujos</p><p>Fotografías x S.G.</p><p>Series</p></div>
       <!--<br>-->
       <!--<hr>-->
       <p>Una pareja de artistas nos contacta para “acondicionar” una propiedad que están pensando comprar. Al salir de la visita les decimos “La casa tiene mucho ruido. Hace falta crueldad.” El proceso de reconstrucción comenzó siendo una “lavada de cara”, siguió como una “refacción”, se volvió luego una “reforma integral” y culminó en “una casa nueva”. La estrategia fue simple, hacer subir desde el fondo lo que la arquitectura ya era: una casa 3 metros de ancho por un largo de 18 metros, desarrollada en vertical en tres niveles y varios desniveles, con el potencial de volverse un pequeño buque largo, esbelto y alto. Se demolió todo el ruido estilístico e innecesario: molduras, falsas vigas de madera, nichos, muros que sectorizaban los espacios según clichés absurdos, equipamiento no pensado para ser utilizado sino para representar un gusto poco refinado. Cuando solo quedaron las losas y sus desniveles, el patio en el fondo y un invernadero, se introdujo una escalera cuadrada en el medio de la casa que conecte cada uno de los desniveles generando un circuito que conecta espacios aislados con carácter y humores específicos.
@@ -366,8 +366,7 @@ Maecenas nec lobortis nunc.
       <span class="anchor" ></span>
       <br><br><br><br><br><br><br><br><br><br><br><br>
       <h3 style="color:white;">.</h3>
-      <!--<p>Dibujos</p>-->
-      <!--<br>-->
+      <div class="guia"><p>Texto</p><p style="font-weight: bold !important;">Dibujos</p><p>Fotografías x S.G.</p><p>Series</p></div>
       <!--<hr>-->
       <img loading="lazy" src="assets/img/05_casa freesbee plantas de arquitectura/01.jpg" alt="Image 1">
        <img loading="lazy" src="assets/img/05_casa freesbee plantas de arquitectura/02.jpg" alt="Image 1">
@@ -380,7 +379,7 @@ Maecenas nec lobortis nunc.
       <span class="anchor" ></span>
       <br><br><br><br><br><br><br><br><br><br><br><br>
       <h3 style="color:white;">.</h3>
-      <!--<p>Fotografías x S.G.</p> -->
+      <div class="guia"><p>Texto</p><p>Dibujos</p><p style="font-weight: bold !important;">Fotografías x S.G.</p><p>Series</p></div>
       <!--<br>-->
       <!--<hr>-->
       <img loading="lazy" src="assets/img/07_casa_freesbee_x_sg/01.jpg" alt="Image 1">
@@ -398,7 +397,7 @@ Maecenas nec lobortis nunc.
       <span class="anchor" ></span>
       <h3 style="color:white;">.</h3>
       <br><br><br><br><br><br><br><br><br><br><br><br>
-      <!--<p>Series</p>-->
+      <div class="guia"><p>Texto</p><p>Dibujos</p><p>Fotografías x S.G.</p><p style="font-weight: bold !important;">Series</p></div>
       <!--<br>-->
       <!--<hr>-->
       <img loading="lazy" src="assets/img/06_casa_freesbee_series/01.jpg" alt="Image 1">
@@ -444,7 +443,7 @@ Ritmo: Catalina Sfer Salas</p>
       <span class="anchor" ></span>
       <br><br><br><br><br><br><br><br><br><br><br><br>
       <h3>Casa F.G.</h3>
-      <!--<p>Texto Descriptivo</p>-->
+      <div class="guia"><p style="font-weight: bold !important;">Texto</p><p>Dibujos</p><p>Fotografías</p></div>
       <!--<br>-->
       <!--<hr>-->
       <p>Un artista precisa una casa lo más pequeña posible. Quiere vivir en ella, pero también utilizarla como espacio de producción. La relación con la intemperie propone, tiene que ser más propia de quién la conoce y trabaja en ella que de quien la idealiza y la contempla. La casa se divide en tres bandas: un pasillo extra-grande central que además de conectar con las dos bandas laterales y permitir atravesar desde la galería de la entrada al lavadero del fondo, suceden las actividades de producción y de ocio. Una banda lateral ancha conforma una secuencia de habitaciones: cocina, baño, ducha, depósito, dormitorio. Cada habitación tiene una ventana hacia el exterior y una puerta hacia la banda central, con excepción del dormitorio: una puerta para cada lado de la cama permite maximizar el espacio. En la banda lateral angosta se forma una secuencia de nichos para equipamiento, intercalados por grandes ventanales que funcionan como pantallas que proyectan el jardín desde fuera.  </p>
@@ -456,7 +455,7 @@ Ritmo: Catalina Sfer Salas</p>
       <span class="anchor" ></span>
       <h3 style="color:white;">.</h3>
       <br><br><br><br><br><br><br><br><br><br><br><br>
-      <!--<p>Dibujos</p>-->
+      <div class="guia"><p>Texto</p><p style="font-weight: bold !important;">Dibujos</p><p>Fotografías</p></div>
       <!--<br>-->
       <!--<hr>-->
       <img loading="lazy" src="assets/img/09_casa gully_planos de arquitectura/01.jpg" alt="Image 1">
@@ -467,7 +466,7 @@ Ritmo: Catalina Sfer Salas</p>
       <span class="anchor" ></span>
       <h3 style="color:white;">.</h3>
       <br><br><br><br><br><br><br><br><br><br><br><br>
-      <!--<p>Fotografías</p>-->
+      <div class="guia"><p>Texto</p><p>Dibujos</p><p style="font-weight: bold !important;">Fotografías</p></div>
       <!--<br>-->
       <!--<hr>-->
       <img loading="lazy" src="assets/img/09_casa gully_fotos/1.jpg" alt="Image 1">
@@ -489,7 +488,7 @@ Ritmo: Catalina Sfer Salas</p>
       <span class="anchor" ></span>
       <br><br><br><br><br><br><br><br><br><br><br><br>
       <h3>Cute-chitecture</h3>
-      <!--<p>Arquitectura Póstuma</p>-->
+      <div class="guia"><p style="font-weight: bold !important;">Arquitectura Póstuma</p><p>Cenotafios</p><p>Puentes</p></div>
       <!--<br>-->
       <!--<hr>-->
       <p>Una arquitectura sensual pero no en el sentido hedonista; sensorial pero no en el sentido de tacto, gusto, olfato…; atmosférica pero no en el sentido del aire o la temperatura….; materialmente heterogénea pero no ecléctica o desagregada; útil y funcional pero no utilitaria ni instrumentalizada; programáticamente específica pero no hiperdeterminada; abierta pero no indeterminada o flexible; una arquitectura de la sensación en la que la dicotomía espacio-tiempo es superada para crear un mundo en sí mismo, sin resolución, sin reconciliación, sin sublimación: un desbarate de todos los sentidos confundidos unos en otros. Arquitectura tierna, sensible, sin caer en la violencia del snobismo ni de la normalización, solo posibles mediante desapegos, evasiones de cualquier sentido trágico de la práctica de arquitectura, en definitiva, una arquitectura amorosa sin miedo a la muerte.</p>
@@ -499,7 +498,7 @@ Ritmo: Catalina Sfer Salas</p>
       <span class="anchor" ></span>
       <br><br><br><br><br><br><br><br><br><br><br><br>
       <h3 style="color:white;">.</h3>
-      <!--<p>Cenotafios</p>-->
+      <div class="guia"><p>Arquitectura Póstuma</p><p style="font-weight: bold !important;">Cenotafios</p><p>Puentes</p></div>
       <!--<br>-->
       <!--<hr>-->
       <img loading="lazy" src="/assets/img/04_cenotafios_fotos/01.jpg" alt="Image 1">
@@ -533,7 +532,7 @@ Ritmo: Catalina Sfer Salas</p>
       <span class="anchor" ></span>
       <br><br><br><br><br><br><br><br><br><br><br><br>
       <h3 style="color:white;">.</h3>
-      <!--<p>Puentes</p>-->
+      <div class="guia"><p>Arquitectura Póstuma</p><p>Cenotafios</p><p style="font-weight: bold !important;">Puentes</p></div>
       <!--<br>-->
          <!--<hr>-->
          <img loading="lazy" src="/assets/img/43_cute-chitecture ii/05.jpg" alt="Image 1"> 
@@ -549,7 +548,7 @@ Ritmo: Catalina Sfer Salas</p>
          <img loading="lazy" src="/assets/img/43_cute-chitecture ii/10.jpg" alt="Image 1"> 
          <img loading="lazy" src="/assets/img/43_cute-chitecture ii/12.jpg" alt="Image 1"> 
          <img loading="lazy" src="/assets/img/43_cute-chitecture ii/13.jpg" alt="Image 1"> 
-          <img loading="lazy" src="/assets/img/43_cute-chitecture ii/15.jpg" alt="Image 1">
+         <img loading="lazy" src="/assets/img/43_cute-chitecture ii/15.jpg" alt="Image 1">
          <img loading="lazy" src="/assets/img/43_cute-chitecture ii/14.jpg" alt="Image 1">  
          <img loading="lazy" src="/assets/img/43_cute-chitecture ii/16.jpg" alt="Image 1"> 
          <br>
@@ -572,7 +571,7 @@ Ritmo: Catalina Sfer Salas</p>
       <span class="anchor" ></span>
       <br><br><br><br><br><br><br><br><br><br><br><br>
       <h3 id="edificioSCW">Edificio S.C.W.</h3>
-      <!--<p>Texto</p>-->
+      <div class="guia"><p style="font-weight: bold !important;">Texto</p><p>Dibujos</p><p>Imágenes</p></div>
       <!--<br>-->
       <!--<hr>-->
       <p>Las musas de un arquitecto son la proyección irracional que puede hacer en sus clientes. Así como un retratista hace visibles al pintar las fuerzas invisibles que están en juego en el rostro de su modelo, un arquitecto espacializa las fuerzas abstractas que están juego en un encargo cualquiera. En ese sentido, su relación con el programa no es científica, ni hermenéutica, ni interpretativa, ni servicial, es más el arte de un médium que se vacía para poder captar los espectros circundantes. En ese sentido, el código de la Ciudad de Buenos Aires y el mercado inmobiliario son los espectros y restricciones dentro de los cuales este proyecto encuentra, por presión como un diamante, no su libertad sino que sus pequeñas salidas hacia adelante.</p>
@@ -584,7 +583,7 @@ Ritmo: Catalina Sfer Salas</p>
       <span class="anchor" ></span>
       <br><br><br><br><br><br><br><br><br><br><br><br>
       <h3 style="color:white;">.</h3>
-      <!--<p>Dibujos</p>-->
+      <div class="guia"><p>Texto</p><p style="font-weight: bold !important;">Dibujos</p><p>Imágenes</p></div>
       <!--<br>-->
       <!--<hr>-->
       <img loading="lazy" src="assets/img/32_edificio/02.jpg" alt="Image 1">
@@ -597,7 +596,7 @@ Ritmo: Catalina Sfer Salas</p>
       <span class="anchor" ></span>
       <h3 style="color:white;">.</h3>
       <br><br><br><br><br><br><br><br><br><br><br><br>
-      <!--<p>Imágenes</p>-->
+      <div class="guia"><p>Texto</p><p>Dibujos</p><p style="font-weight: bold !important;">Imágenes</p></div>
       <!--<br>-->
       <!--<hr>-->
       <img loading="lazy" src="assets/img/32_edificio/01.jpg" alt="Image 1">
